--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
 version: "3"
 services:
   app:
-    container_name: nodejsApp
+    container_name: nodejs
     restart: always
     build: .
+    volumes:  
+      - .:/app
+    working_dir: /app
     ports:
       - "80:8080"
     links:
